fix icon colour on mobile, amend NL form

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -131,23 +131,6 @@ body {
     text-align: center;
 }
 
-/* Mobile top header */
-/* .fa-search {
-    color: white;
-} */
-
-/* .my-0 {
-    color: white; 
-} */
-
-/* .fa-user {
-    color: white;
-} */
-
-/* .fa-shopping-cart {
-    color: white;
-} */
-
 
 
 -------------------------------- Media Queries
